html and css changes

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,16 +4,26 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
-    <!-- Create a header element  -->
     <header>
         <h1>Matthew Johnson</h1>
     </header>
+    <img src="cardinal.png" alt="Flat Icon of A Cardinal">
+        <ol> Fun Facts About Me
+            <li>Favortie bird is the Cardinal</li>
+            <li>I have an on again off again relationship with Coffee</li>
+            <li>I enjoy philosophy and the study of ideas</li>
+        </ol>
+    <footer>
+        <p>"Make the best use of what is in your power, and take the rest as it happens."  - Epictetus</p>
+    </footer>
+
+    <!-- Create a header element  -->
 
     <!-- Inside the header, add an <h1> element containing your name -->
 
