Update to HTML Text and CSS styling

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -16,7 +16,7 @@
     <img src="cardinal.png" alt="Flat Icon of A Cardinal">
         <ol> Fun Facts About Me
             <li>Favortie bird is the Cardinal</li>
-            <li>I have an on again off again relationship with Coffee</li>
+            <li>I love audiobooks</li>
             <li>I enjoy philosophy and the study of ideas</li>
         </ol>
     <footer>
